--- a/drum-machine/src/App.css
+++ b/drum-machine/src/App.css
@@ -1,5 +1,5 @@
 
-
+/* 
 /* .App {
   text-align: center;
 }
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   height: 300px;
-}
+} */
 
 .drum-pad {
   display: inline-block;
