--- a/drum-machine/src/App.css
+++ b/drum-machine/src/App.css
@@ -1,6 +1,4 @@
-
-/* 
-/* .App {
+.App {
   text-align: center;
 }
 
@@ -9,7 +7,7 @@
   justify-content: center;
   align-items: center;
   height: 300px;
-} */
+}
 
 .drum-pad {
   display: inline-block;
@@ -22,4 +20,4 @@
   font-size: 24px;
   color: white;
   cursor: pointer;
-} */
+}  
