--- a/drum-machine/src/App.css
+++ b/drum-machine/src/App.css
@@ -1,14 +1,16 @@
 #pad{
-  background-color: black;
+  background-color: beige;
   width: 300px;
-  height: 500px;
+  height: 200px;
+  border: #2980b9;
+  margin: 15px;
 }
 
 .buttons {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 300px;
+  height: 30px;
 }
 
 #but {
