--- a/drum-machine/src/App.css
+++ b/drum-machine/src/App.css
@@ -2,7 +2,7 @@
   background-color: beige;
   width: 300px;
   height: 200px;
-  border: #2980b9;
+  border: 2px solid #2980b9;
   margin: 15px;
 }
 
