--- a/drum-machine/src/App.css
+++ b/drum-machine/src/App.css
@@ -1,8 +1,8 @@
 #pad{
   background-color: beige;
-  width: 300px;
+  width: 400px;
   height: 200px;
-  border: 2px solid #2980b9;
+  border: #2980b9;
   margin: 15px;
 }
 
@@ -14,14 +14,14 @@
 }
 
 #but {
-  display: inline-block;
-  width: 80px;
-  height: 80px;
+  display: flex;
+  width: 60px;
+  height: 60px;
   margin: 10px;
   background-color: #3498db;
   border: 2px solid #2980b9;
   border-radius: 5px;
-  font-size: 24px;
+  font-size: 14px;
   color: white;
   cursor: pointer;
 }  
