--- a/drum-machine/src/App.css
+++ b/drum-machine/src/App.css
@@ -1,4 +1,5 @@
 #pad{
+  display: grid;
   background-color: beige;
   width: 400px;
   height: 200px;
@@ -6,15 +7,15 @@
   margin: 15px;
 }
 
-.buttons {
-  display: flex;
+/* .buttons {
+  display: inline-grid;
   justify-content: center;
   align-items: center;
   height: 30px;
-}
+} */
 
 #but {
-  display: flex;
+  display: inline-flex;
   width: 60px;
   height: 60px;
   margin: 10px;
