--- a/drum-machine/src/App.css
+++ b/drum-machine/src/App.css
@@ -1,9 +1,9 @@
 #pad{
   display: grid;
-  row-gap: 5px;
+  grid-template-columns: repeat(3, 1fr);
   background-color: beige;
   width: 400px;
-  height: 400px;
+  height: 300px;
   border: #2980b9;
   float: left;
 }
@@ -27,11 +27,11 @@
   grid-row: 1;
 }
 .two {
-  grid-column: 1 ;
+  grid-column: 2;
   grid-row: 1;
 }
 .three {
-  grid-column: 1;
+  grid-column: 3;
   grid-row: 1;
 }
 .four {
@@ -39,10 +39,10 @@
   grid-row: 2;
 }
 .five {
-  grid-column: 1;
+  grid-column: 2;
   grid-row: 2;
 }
 .six {
-  grid-column: 1;
+  grid-column: 3;
   grid-row: 2;
 }
